# locaal-sdk

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  _2home_2runner_2work_2locaal-sdk_2locaal-sdk_2src_2modules_2transcription_2include_2audio-resampler_8h-example.html  annotated.html  audio-resampler_8cpp.html  audio-resampler_8h.html  audio-resampler_8h_source.html  classAudioResampler-members.html  classAudioResampler.html  classLogger-members.html  classLogger.html  classLogger_1_1LogStream-members.html  classLogger_1_1LogStream.html  classTokenBufferThread-members.html  classTokenBufferThread.html  classVadIterator-members.html  classVadIterator.html  classes.html  classlocaal_1_1Transcription-members.html  classlocaal_1_1Transcription.html  classtimestamp__t-members.html  classtimestamp__t.html  dir_1486fe35607b194bec49221a94fd44b1.html  dir_1693a56541d7c840bf12733686c410b5.html  dir_48bd54dcd86210a131d5bab7b05ef6d7.html  dir_55f689ffd0839a01c13545106e3c2884.html  dir_5fcf917ea8df1b19a60f6c1616493939.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_824161ec56e94789f553962e25e304b1.html  dir_a0de90b3a5fa6386a9cfddb498134916.html  dir_dd6af82c89f72620149379db2da3147c.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  dir_fc3477b8692813e49521661e00a41294.html  examples.html  files.html  functions.html  functions_enum.html  (+92 more)
.github/workflows/: ci.yaml  doxygen-gh-pages.yml
cmake/: BuildCTranslate2.cmake  BuildICU.cmake  BuildMyCurl.cmake  BuildPlatformdirs.cmake  BuildSDL.cmake  BuildSentencepiece.cmake  BuildWhispercpp.cmake  FetchLibav.cmake  FetchOnnxruntime.cmake  LocaalSDKConfig.cmake.in
examples/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  realtime_transcription.cpp
examples/cpp/: CMakeLists.txt  audio_capture.cpp  audio_capture.h
scripts/: build-nix.sh  build-windows.ps1
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  (+59 more)
src/: transcription-filter-data.h
src/modules/core/: CMakeLists.txt
src/modules/core/include/: locaal.h  logger.h  model-downloader-types.h  model-downloader.h  model-find-utils.h
src/modules/core/src/: logger.cpp  model-downloader.cpp  model-find-utils.cpp  model-infos.cpp
src/modules/transcription/: CMakeLists.txt
src/modules/transcription/include/: audio-resampler.h  silero-vad-onnx.h  token-buffer-thread.h  transcription-context.h  transcription-utils.h  transcription.h  vad-processing.h  whisper-language.h  whisper-model-utils.h  whisper-processing.h  whisper-utils.h
src/modules/transcription/src/: audio-resampler.cpp  silero-vad-onnx.cpp  token-buffer-thread.cpp  transcription.cpp  vad-processing.cpp  whisper-model-utils.cpp  whisper-processing.cpp  whisper-utils.cpp
src/modules/translation/: CMakeLists.txt
src/modules/translation/include/: language_codes.h  translation-language-utils.h  translation-utils.h  translation.h
src/modules/translation/src/: translation-utils.cpp  translation.cpp
